opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/line-up-words"
bug-reports: "https://github.com/janestreet/line-up-words/issues"
dev-repo: "git+https://github.com/janestreet/line-up-words.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core"
  "core_extended"
  "patience_diff"
  "ppx_jane"
  "re2"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "pcre"
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Align words in an intelligent way

line-up-words is a small command line tool that tries to align words
in a sequence of lines in an intelligent way.

It comes as a binary and an emacs mode.
"
