opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/line-up-words"
bug-reports: "https://github.com/janestreet/line-up-words/issues"
dev-repo: "git+https://github.com/janestreet/line-up-words.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/line-up-words/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "core_unix"
  "patience_diff"
  "ppx_jane"
  "re2"
  "dune"          {>= "3.17.0"}
  "pcre"
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Align words in an intelligent way"
description: "
line-up-words is a small command line tool that tries to align words
in a sequence of lines in an intelligent way.

It comes as a binary and an emacs mode.
"
